Fix subscribe margin on iOS

--- a/desktop/apps/editorial_features/components/venice_2017/stylesheets/carousel.styl
+++ b/desktop/apps/editorial_features/components/venice_2017/stylesheets/carousel.styl
@@ -236,7 +236,7 @@ nav-height = 54px
       garamond-size('l-body')
 
     &__subscribe
-      margin 0 10px
+      margin 0 auto
     &__text
       justify-content flex-start
       padding-top 200px
